packages/frontend/src/features/HomepageContent/components/CategoryCards/index.module.css
.category-cards {
    display: flex;
    justify-content: center;

    background-color: var(--site-colour-primary, rgb(255, 249, 243));

    width: min(calc(var(--vw) * 100), 100%);
    padding: 32px 0px;
}

.category-cards-width-controller {
    display: flex;
    flex-direction: column;
    gap: 16px;

    width: min(calc(var(--vw) * 100), 100%);
    max-width: 1280px;
    padding: 16px;
    margin: auto;

    @media (min-width: $mantine-breakpoint-sm) {
        max-width: 640px;
    }

    @media (min-width: $mantine-breakpoint-md) {
        max-width: 768px;
    }

    @media (min-width: $mantine-breakpoint-lg) {
        max-width: 1024px;
    }

    @media (min-width: $mantine-breakpoint-xl) {
        max-width: 1280px;
    }
}

.top-row-container {
    display: grid;
    grid-template-columns: 1fr;
    gap: 16px;

    @media (min-width: $mantine-breakpoint-xs) {
        grid-template-columns: 1fr auto;
    }
}

.title-container {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.category-cards-title {
    color: black;
    font-family: var(--font-primary);
    font-size: 1.35rem;
    font-weight: 500;

    @media (min-width: $mantine-breakpoint-xs) {
        font-size: 1.5rem;
    }

    @media (min-width: $mantine-breakpoint-sm) {
        font-size: 1.7rem;
    }
}

.category-cards-subcopy {
    color: rgb(96, 96, 96);
    font-family: var(--font-primary);
    font-size: 1.05rem;
    font-weight: 400;

    @media (min-width: $mantine-breakpoint-xs) {
        font-size: 1.15rem;
    }

    @media (min-width: $mantine-breakpoint-sm) {
        font-size: 1.25rem;
    }
}

.shop-now-button {
    font-family: var(--font-primary);
    font-size: 0.92rem;
    text-align: center;

    padding: 0px 32px;

    @media (min-width: $mantine-breakpoint-xs) {
        font-size: 0.96rem;
    }

    @media (min-width: $mantine-breakpoint-sm) {
        font-size: 1rem;
    }
}

.shop-now-button:focus-visible {
    outline: 2px solid #000;
    border-radius: 0px;
}

.Carousel-root {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.Carousel-container {
    align-self: start;
}

.Carousel-viewport {
    padding: 4px;
}

.Carousel-indicators {
    align-self: center;

    position: initial;

    display: flex;
    flex-direction: row;
    gap: 0px;

    max-width: 100%;
}

.Carousel-indicator {
    border-radius: 0px;
    background-color: rgba(0, 0, 0, 0.2);

    width: 40px;
    height: 3px;
}

.Carousel-indicator[data-active] {
    background-color: rgba(0, 0, 0, 0.7);
}

.Carousel-slide {
    padding: 2px 0px 0px;
}

.category-link {
    display: flex;
    flex-direction: column;

    text-align: start;
    text-decoration: none;

    border: none;
    background-color: transparent;

    width: 100%;
    height: 100%;
    padding: 0px;
}

@media (hover: hover) {
    .category-link:not(:disabled):hover {
        cursor: pointer;
    }
}

.category-link:focus-visible {
    outline: 2px solid #000;
    outline-offset: 2px;
    border-radius: 0px;
}

.category-image-container {
    position: relative;

    border-radius: 8px;
    background: #faf8f2;
    background: linear-gradient(
        0deg,
        rgb(250, 248, 242) 0%,
        rgb(255, 252, 248) 30%,
        rgb(240, 237, 233) 30%,
        rgb(224, 220, 215) 100%
    );

    width: 100%;
    aspect-ratio: 1;

    margin-bottom: 8px;
}

.category-image {
    border-radius: 8px;

    width: 100%;
    height: 100%;
}

.category-name {
    color: black;
    font-family: var(--font-primary);
    font-size: 1.4rem;
    font-weight: 500;

    margin-bottom: 4px;

    @media (min-width: $mantine-breakpoint-xs) {
        font-size: 1.15rem;
    }

    @media (min-width: $mantine-breakpoint-sm) {
        font-size: 1.25rem;
    }
}

.category-description {
    color: rgb(64, 64, 64);
    font-family: var(--font-primary);
    font-size: 1.05rem;
    font-weight: 400;

    @media (min-width: $mantine-breakpoint-xs) {
        font-size: 0.96rem;
    }

    @media (min-width: $mantine-breakpoint-sm) {
        font-size: 1rem;
    }
}

